[project]
name = "revolt.py"
dynamic = ["version"]
description = "Python wrapper for the revolt.chat API"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["wrapper", "async", "api", "websockets", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "aiohttp==3.8.*",
    "ulid-py==1.1.*",
    "aenum==3.1.*",
    "typing_extensions>=4.4.0"
]

[project.optional-dependencies]
speedups = [
    "ujson==5.1.*",
    "msgpack==1.0.*"
]
docs = [
    "Sphinx==5.2.*",
    "sphinx-nameko-theme==0.0.*",
    "sphinx-toolbox==3.2.*",
    "setuptools==65.4.*"
]

[project.urls]
Homepage = "https://github.com/revoltchat/revolt.py"
Documentation = "https://revoltpy.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/revoltchat/revolt.py"
"Bug Tracker" = "https://github.com/revoltchat/revolt.py/issues"

[[project.authors]]
name = "Zomatree"
email = "me@zomatree.live"

[tool.hatch.version]
path = "revolt/__init__.py"

[tool.hatch.build]
only-packages = true
include = ["revolt/**/*"]


[tool.pyright]
reportPrivateUsage = false
reportImportCycles = false
reportIncompatibleMethodOverride = false
typeCheckingMode = "strict"

[tool.hatch.build.targets.sdist]
strict-naming = false

[tool.hatch.build.targets.wheel]
strict-naming = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
